--- a/stat-service/server/src/main/resources/application.yaml
+++ b/stat-service/server/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url:               jdbc:postgresql://localhost:5432/postgres
+    url:               jdbc:postgresql://localhost:5432/stats_db
     username:          postgres
     password:          pass
 
