--- a/ewm-service/src/main/resources/application.yaml
+++ b/ewm-service/src/main/resources/application.yaml
@@ -15,6 +15,6 @@ spring:
 
     datasource:
       driver-class-name: org.postgresql.Driver
-      url: jdbc:postgresql://localhost:5433/ewm_db
+      url: jdbc:postgresql://localhost:5432/postgres
       username: postgres
       password: pass
