--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - stats-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats_db
+      - POSTGRES_DB=stats_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+      - TZ=Europe/Moscow
 
   stats-db:
     image: postgres:14-alpine
@@ -20,6 +24,7 @@ services:
       - POSTGRES_DB=stats_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=pass
+      - TZ=Europe/Moscow
 
   ewm-service:
     build: ./ewm-service
@@ -29,6 +34,12 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm_db
+      - POSTGRES_DB=ewm_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+      - TZ=Europe/Moscow
 
   ewm-db:
     image: postgres:14-alpine
@@ -39,3 +50,4 @@ services:
       - POSTGRES_DB=ewm_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=pass
+      - TZ=Europe/Moscow
